gcc/testsuite/rust/rustc/ui/parser/issues/issue-101540_dg.rs
struct S1 {
    struct S2 {
// { dg-error "" "" { target *-*-* } .-1 }
    }
}

fn main() {}

